// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic: mount 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

<styled.section>
  <section
    className="c0"
  >
    <styled.h1>
      Hello World, this is my first styled component!
    </styled.h1>
  </section>
</styled.section>
`;

exports[`basic: shallow 1`] = `
.c0 {
  padding: 4em;
  background: papayawhip;
}

<section
  className="c0"
>
  <styled.h1>
    Hello World, this is my first styled component!
  </styled.h1>
</section>
`;
